--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!doctype html>
 <html lang="fr">
 
-<head>
-  <meta charset="UTF-8" />
+<meta charset="UTF-8" />
+<link rel="icon" type="image/png" href="/logodroifil.png" />
+<link rel="apple-touch-icon" href="/logodroifil.png" />
+<link rel="manifest" href="/manifest.json" />
+<meta name="theme-color" content="#3b82f6" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <link rel="icon" type="image/png" href="/logodroifil.png" />
-
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
-  <title>Droit-fil | LENGLART</title>
+<title>Droit-fil | LENGLART</title>
 </head>
 
 <body>
